# backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  Makefile.toml  buildspec.yml  readme.md  rustfmt.toml
.circleci/: config.yml
.circleci/images/: service.dockerfile
.codebuild/: Dockerfile  Dockerfile.template  DockerfileBuild.template  buildspec_service.yml  dockerd-entrypoint.sh  gen_lambda_artifacts.sh  make_dockerfile  service_pkgid
.github/workflows/: builder.yml
client_generator/: Cargo.toml
client_generator/src/: lib.rs  operation.rs  service.rs  token_utils.rs
client_test/: Cargo.toml
client_test/src/: main.rs
kube/: frontend-service.yml  identity-service.yml  refresh-token-cache.yml
serde_ddb/: Cargo.toml
serde_ddb/src/: error.rs  lib.rs
serde_ddb/src/common/: mod.rs
serde_ddb/src/ddb/: de.rs  ser.rs
serde_ddb/tests/: dynamodb.rs
service_client_runtime/: Cargo.toml
service_client_runtime/src/: lib.rs
service_clients/identity_service_client/: Cargo.toml
service_clients/identity_service_client/src/: lib.rs
services/core/: Cargo.toml
services/core/src/: endpoint_error.rs  lib.rs  operation_error.rs
services/core/src/auth/: jwt.rs
services/core/src/ddb/: adapter.rs  get_item.rs  mod.rs  put_item.rs  query.rs  scan.rs  update_item.rs
services/core/src/resource_access/: mod.rs  serde.rs  types.rs
services/core/src/resource_access/graphql_interop/: extension.rs  mod.rs  parser.rs
services/core/src/resource_access/string_interop/: compiler.rs  mod.rs  parser.rs  types.rs
services/core/src/resource_access_path/: graphql_extension.rs  graphql_interop.rs  mod.rs  string_interop.rs  types.rs
services/core/src/resource_access_path/string_parser/: mod.rs  parser.rs  string_literal.rs  types.rs
services/core/src/telemetry/: logging.rs  mod.rs
services/course_service/commons/: Cargo.toml
services/course_service/commons/src/: lib.rs
services/course_service/commons/src/controlplane/: create_course.rs  describe_course.rs  enroll.rs  get_grades.rs  list_courses.rs  list_courses_for_account.rs  mod.rs  put_grade.rs
services/course_service/commons/src/dataplane/: mod.rs
services/course_service/service/: Cargo.toml
services/course_service/service/src/: main.rs
services/course_service/service/src/operations/: create_course.rs  describe_course.rs  enroll.rs  get_grades.rs  list_courses.rs  list_courses_for_account.rs  mod.rs  put_grade.rs
services/frontend/: Cargo.toml  build.rs
services/frontend/src/: lib.rs  main.rs
services/frontend/src/actix_middleware/: request_id.rs
services/frontend/src/authorization/: access.rs  extension.rs  mod.rs  resource_path.rs
services/frontend/src/graphql/: extension.rs
services/frontend/src/integration/: mod.rs
services/frontend/src/integration/identity_service/: client.rs  mod.rs  schema.rs
services/frontend/src/schema/: authorization.rs  mod.rs  request_id.rs
services/frontend/src/telemetry/: logging.rs
services/identity_service/: Cargo.toml  build.rs
services/identity_service/client/: Cargo.toml
services/identity_service/client/src/: lib.rs
services/identity_service/commons/: Cargo.toml
services/identity_service/commons/src/: create_account.rs  describe_account.rs  lib.rs  list_accounts.rs  update_account.rs  update_credentials.rs
services/identity_service/commons/src/dataplane/: mod.rs
services/identity_service/proto/: service.proto
services/identity_service/service/: Cargo.toml
services/identity_service/service/src/: context.rs  main.rs  svc.rs  user_account.rs
services/identity_service/service/src/data_plane/: mod.rs
services/identity_service/service/src/operations/: create_account.rs  describe_account.rs  list_accounts.rs  mod.rs
services/identity_service/src/: context.rs  main.rs  svc.rs  user_account.rs
services/identity_service/src/operations/: authenticate.rs  authorize.rs  create_account.rs  describe_account.rs  generate_access_token.rs  get_permissions.rs  list_accounts.rs  mod.rs  update_account_state.rs  update_permissions.rs
services/identity_service/src/pb/: .gitignore  conversion.rs  mod.rs
services/identity_service/src/permissions/: anonymous.rs  default.rs  helper.rs  mod.rs
services/identity_service/src/user_account/: ddb_repository.rs  mod.rs  password.rs  repository.rs  types.rs
services/identity_service/src/utils/: account.rs  memcache.rs  mod.rs  permissions.rs  validation.rs
utils/: Cargo.toml
utils/src/: dynamodb_interop.rs  lib.rs
