[workspace]
members = [
        "utils",
        "client_generator",
        "service_client_runtime",
        "services/identity_service/commons",
        "services/identity_service/client",
        "services/identity_service/service",
        "services/course_service/commons",
        "services/course_service/service",
        "client_test",
]
