[package]
name = "client_generator"
version = "0.1.0"
authors = ["Victor Barbu <vicbarbu@pm.me>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.70", features = ["full", "derive", "fold", "parsing", "printing"] }
quote = "1.0.9"
proc-macro2 = "1.0.26"
convert_case = "0.4.0"
