[package]
name = "identity_service_client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client_generator = { path = "../../client_generator" }
service_client_runtime = { path = "../../service_client_runtime" }
