[package]
name = "service_core"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["rustls", "json"] }
strum = { version = "0.20.0", features = ["derive"] }
lambda_http = "0.3.0"
tonic = "0.6.1"
aws-config = "0.9.0"
aws-sdk-dynamodb = "0.9.0"
async-trait = "0.1"
thiserror = "1.0"
typed-builder = "0.10.0"
