[package]
name = "service_core"
version = "0.2.0"
edition = "2021"

[dependencies]
tonic = "0.6.1"
aws-sdk-dynamodb = "0.9.0"
async-trait = "0.1"
thiserror = "1.0"
typed-builder = "0.10.0"
async-graphql = "3.0"
async-graphql-parser = "3.0"
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
