[package]
name = "service_core"
version = "0.2.0"
edition = "2021"

[dependencies]
tonic = "0.6.1"
aws-sdk-dynamodb = "0.9.0"
async-trait = "0.1"
thiserror = "1.0"
typed-builder = "0.10.0"
async-graphql = "3.0"
async-graphql-parser = "3.0"
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
rstest = "0.12.0"
log = "0.4.14"
tracing = { version = "0.1", features = ["attributes", "tracing-attributes", "log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.3"
