[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
async-graphql = "3.0"
async-graphql-actix-web = "3.0"
async-graphql-parser = "3.0"
actix-web = "4.0"
async-trait = "0.1.53"
tonic = "0.6.1"
prost = "0.9.0"
thiserror = "1.0"
futures-util = "0.3"
service_core = { path = "../core" }
jsonwebtoken = "8.1.0"
base64 = "0.13.0"

[build-dependencies]
tonic-build = "0.6.0"

[package.metadata]
service_name = "frontend"
