[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
async-graphql = { version = "3.0", features = ["tracing", "tracing-futures"] }
async-graphql-actix-web = "3.0"
async-graphql-parser = "3.0"
actix-web = "4.0"
actix-service = "2.0.2"
tracing-actix-web = "0.5.1"
async-trait = "0.1.53"
tonic = "0.6.1"
prost = "0.9.0"
thiserror = "1.0"
futures-util = "0.3"
service_core = { path = "../core" }
jsonwebtoken = "8.1.0"
base64 = "0.13.0"
log = "0.4.14"
tracing = { version = "0.1", features = ["attributes", "tracing-attributes", "log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing-log = "0.1.3"

[build-dependencies]
tonic-build = "0.6.0"

[package.metadata]
service_name = "frontend"
