[package]
name = "identity_service"
version = "0.2.0"
edition = "2021"

[dependencies]
service_core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_dynamodb = { version = "0.8.0", default-features = false, features = ["rustls"] }
tokio = { version = "1.5.0", features = ["full"] }
simple_logger = "1.11.0"
log = "0.4.14"
rusoto_core = { version = "0.46.0", default-features = false, features = ["rustls"] }
rusoto_dynamodb = { version = "0.46.0", default-features = false, features = ["rustls"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
bytes = "1.0.1"
sha2 = "0.9.5"
base64 = "0.13.0"
utils = { path = "../../utils" }
tonic = "0.6.1"
prost = "0.9.0"

[build-dependencies]
tonic-build = "0.6.0"

[package.metadata]
service_name = "identity_service"
