[package]
name = "identity_service"
version = "0.2.0"
edition = "2021"

[dependencies]
service_core = { path = "../core" }
aws-config = "0.9.0"
aws-sdk-dynamodb = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ddb = { path = "../../serde_ddb" }
tokio = { version = "1.5.0", features = ["full"] }
simple_logger = "1.11.0"
log = "0.4.14"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
bytes = "1.0.1"
sha2 = "0.9.5"
base64 = "0.13.0"
utils = { path = "../../utils" }
tonic = "0.6.1"
prost = "0.9.0"
http = "0.2.6"
thiserror = "1.0"
common_macros = "0.1.1"

[build-dependencies]
tonic-build = "0.6.0"

[package.metadata]
service_name = "identity_service"
