[package]
name = "identity_service_commons"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lambda_http = "0.3.0"
simple-error = "0.2.3"
utils = { path = "../../../utils" }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
bytes = "1.0.1"
sha2 = "0.9.5"
service_core = { path = "../../core" }
reqwest = { version = "0.11", features = ["rustls", "json"] }
strum = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
rusoto_core = { version = "0.46.0", default-features = false, features = ["rustls"] }
rusoto_dynamodb = { version = "0.46.0", default-features = false, features = ["rustls"] }
serde_dynamodb = { version = "0.8.0", default-features = false, features = ["rustls"] }
