[package]
name = "identity_service_lambda"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.5.0", features = ["full"] }
lambda_http = "0.3.0"
simple_logger = "1.11.0"
log = "0.4.14"
commons = { path = "../commons" }

[package.metadata]
artifact_type = "lambda_bootstrap"
service_name = "identity_service"
