[package]
name = "identity_service_lambda"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.5.0", features = ["full"] }
lambda_http = "0.3.0"
simple_logger = "1.11.0"
log = "0.4.14"
commons = { path = "../commons" }
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"
uuid = { version = "0.8.2", features = ["v4"] }
bytes = "1.0.1"
sha2 = "0.9.5"

[package.metadata]
artifact_type = "lambda_bootstrap"
service_name = "identity_service"
